@@ -1,3 +1,10 @@
+2006-06-15  Kevin B. Kenny  <kennykb@acm.org>
+
+	* generic/tdbcodbc.c: Removed the default check for Tk. Instead,
+	added a '-parent window' option to the constructor of
+	tdbc::odbc::connection that gives a parent window for the
+	driver manager dialog.
+	
 2008-06-11  Kevin B. Kenny  <kennykb@acm.org>
 	
 	* generic/tdbcodbc.c: Split [$resultset nextrow] into two primitive
